# agentcore-cloudwatch-agent

./: .gitignore  README.md
app/: .env.example  Dockerfile  README.md  invoke_agent.py  pyproject.toml
app/scripts/: build_and_push.sh  run_local.sh
app/src/cw_sre_agent/: __init__.py  __main__.py  agent.py  cli.py  config.py  export.py  logging.py  memory.py  remediation.py  server.py
app/src/cw_sre_agent/aws/: __init__.py  assume_role.py  session_cache.py
lambda/: log_watcher.py
scripts/: inject_demo_logs.py  run_demo.sh
terraform/: .terraform.lock.hcl  README.md  agentcore.tf  cloudwatch.tf  demo.tf  docker.tf  ecr.tf  iam.tf  locals.tf  log_watcher.tf  memory.tf  outputs.tf  providers.tf  variables.tf
